[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "example-package"
version = "0.0.1"
authors = [
  { name="Daniel Mizuki", email="dmizuki12@gmail.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
]

[project.urls]
Homepage = "https://github.com/daniel-mizuki/example-package"
Issues = "https://github.com/daniel-mizuki/example-package/issues"